<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"


        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Nombre"
            android:id="@+id/textNombre"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextNombre"
            android:layout_column="3"
            android:text="@string/CadVacia" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Edad"
            android:id="@+id/textEdad"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextEdad"
            android:layout_column="3"
            android:text="@string/CadVacia" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ColorFavorito"
            android:id="@+id/textColorFav"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextColorFav"
            android:layout_column="3"
            android:text="@string/CadVacia"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enviar"
            android:id="@+id/botonEnviar"
            android:layout_column="3" />
    </TableRow>
</TableLayout>
